src/math_ops/snapshots/rbx_types_ops__math_ops__udim__udim_sub_f32.snap
---
source: src/math_ops/udim.rs
expression: "UDim::new(10.0, 32).sub(&5.0f32.into())"
---
UDim:
  - 5
  - 32
