src/math_ops/snapshots/rbx_types_ops__math_ops__udim__udim_sub_udim.snap
---
source: src/math_ops/udim.rs
expression: "UDim::new(10.0, 16).sub(&UDim::new(5.0, 32).into())"
---
UDim:
  - 5
  - -16
